# dnf-scaffold

./: .gitignore  README.md
rust/: Cargo.toml
rust/src/: command.rs  error.rs  interfaces.rs  lib.rs  main.rs  types.rs
rust/src/command/: command_options.rs  options.rs  subcommand.rs
rust/src/command/command_options/: command_option.rs
rust/src/command/options/: advisory.rs  allowerasing.rs  assumeno.rs  assumeyes.rs  best.rs  bugfix.rs  bz.rs  cacheonly.rs  color.rs  (+44 more)
rust/src/interfaces/: command_option_arg.rs  validate.rs
rust/src/types/: color.rs  debug_level.rs  error_level.rs  exclude.rs
rust/tests/: lib.rs
rust/tests/options/: advisory.rs  allowerasing.rs  assumeno.rs  assumeyes.rs  best.rs  bugfix.rs  bz.rs  cacheonly.rs  color.rs  comment.rs  config.rs  cve.rs  debuglevel.rs  debugsolver.rs  disable.rs  disableexcludes.rs  disableplugin.rs  disablerepo.rs  downloaddir.rs  downloadonly.rs  enable.rs  enableplugin.rs  enablerepo.rs  enhancement.rs  errorlevel.rs  exclude.rs  excludepkgs.rs  forcearch.rs  help.rs  installroot.rs  ipv4.rs  ipv6.rs  mod.rs  newpackage.rs  noautoremove.rs  nobest.rs  nodocs.rs  nogpgcheck.rs  noplugins.rs  obsoletes.rs  (+14 more)
rust/tests/subcommand/: alias.rs  autoremove.rs  check.rs  checkupdate.rs  clean.rs  deplist.rs  distrosync.rs  downgrade.rs  group.rs  help.rs  history.rs  info.rs  install.rs  list.rs  makecache.rs  mark.rs  mod.rs  module.rs  provides.rs  reinstall.rs  remove.rs  repoinfo.rs  repolist.rs  repoquery.rs  repositorypackages.rs  search.rs  shell.rs  swap.rs  updateinfo.rs  upgrade.rs  upgrademinimal.rs
(+72 files in other folders)
