[package]
name = "dnf-scaffold-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dnf_scaffold"

[dependencies]
prun-rs = { git = "https://github.com/dboeger1/prun.git" }
strum = "0.26.2"
strum_macros = "0.26.2"

[dev-dependencies]
itertools = "0.12.0"
